# bioassert

./: .gitignore  README.md  pyproject.toml
bioassert/: __init__.py  cli.py  project.py  validator.py
bioassert/config/: __init__.py  loader.py  schema.py  validator.py
bioassert/generator/: __init__.py  patient_sampler.py  post_process.py  renderer.py  sampler.py
bioconfigs/: biomarkers.json  common_variations.json
docs/: CONFIG_ARCHITECTURE.md  NSCLC_BIOMARKER_REFERENCE.md  PHASE3_PLAN.md  PROJECT_SPEC.md  architecture.md  complexity_levels.md  config_architecture.md  conversation_context.md  known_issues.md  limitations.md  nsclc_biomarker_reference.md  project_spec.md  roadmap.md  validation_50k_melanoma.md  validation_50k_sample.md  variation_noise_profile.md
docs/archived/: CLAUDE_CODE_KICKOFF.md  PHASE3_PLAN.md  README.md  claude_code_kickoff.md
projects/melanoma/: project.json
projects/nsclc_adenocarcinoma/: README.md  project.json
scripts/: audit_alias_repeat_mentions.py  audit_bug3a.py  audit_span_integrity.py  generate_corpus_v1.py  sample_phase3_10.py
tests/: conftest.py  test_abbreviation_inconsistency.py  test_cli.py  test_compounding_tiers.py  test_config_loader.py  test_config_validator.py  test_l3_rendering.py  test_l3_shorthand.py  test_l4_rendering.py  test_l4_shorthand.py  test_l5_negation_scope.py  test_l5_noise_expansion.py  test_l6_temporal_certainty.py  test_l7_cross_sentence_coref.py  test_patient_sampler.py  test_phase2a_preservation.py  test_post_process.py  test_project.py  test_renderer.py  test_sampler.py  test_validator.py
(+1 files in other folders)
