[project]
name = "bioassert"
version = "0.0.1"
description = "Synthetic corpus generator for biomarker assertion extraction in NSCLC"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BioAssert contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bioassert"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
